Fixed JDK library usage to keep the kernel compatible with JDK8.